objects/OpportunitiesSnap__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ExpectedRevenue__c</fullName>
        <label>Expected Revenue</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>OportunityName__c</fullName>
        <label>Oportunity Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <label>Opportunities Snap</label>
    <nameField>
        <displayFormat>OS-{000000}</displayFormat>
        <label>TestObject Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opportunities Snaps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>